--- a/docs/api/migration-guides/qiskit-runtime-use-case.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-use-case.mdx
@@ -37,7 +37,7 @@ result = job.result()
 
 ## Circuits with options
 
-All options that were available with `backend.run` are available in the Qiskit Runtime primitives, but they are specified differently.  For more information, see [Migrate `backend.run` options to primitive options](qiskit-runtime-options) and [Advanced Qiskit Runtime options.](../._createMdxContent./run/advanced-runtime-options)
+All options that were available with `backend.run` are available in the Qiskit Runtime primitives, but they are specified differently.  For more information, see [Migrate `backend.run` options to primitive options](qiskit-runtime-options) and [Advanced Qiskit Runtime options.](../../run/advanced-runtime-options)
 
 <Tabs>
   <TabItem value="Updated" label="Runtime primitives">
