--- a/docs/api/migration-guides/index.mdx
+++ b/docs/api/migration-guides/index.mdx
@@ -13,7 +13,7 @@ These migration guides help you more effectively use Qiskit and Qiskit Runtime:
    * [Qiskit 1.0 feature changes](/api/migration-guides/qiskit-1.0-features)
 * [Migrate to the Qiskit Runtime V2 primitives](/api/migration-guides/v2-primitives)
 * Migrate to Qiskit Runtime
-   * [How to migrate](./qiskit-runtime)
+   * [Overview](./qiskit-runtime)
    * [Migrate from `qiskit-ibmq-provider`](./qiskit-runtime-from-ibmq-provider)
    * [Migrate from `qiskit_ibm_provider`](./qiskit-runtime-from-ibm-provider)
    * [Migrate `backend.run` options to primitives](./qiskit-runtime-options)
