--- a/docs/api/migration-guides/qiskit-runtime.mdx
+++ b/docs/api/migration-guides/qiskit-runtime.mdx
@@ -7,19 +7,17 @@ in_page_toc_max_heading_level: 2
 ---
 
 <span id="migrate-to-qr"></span>
-# Migrate to using Qiskit Runtime primitives
+# Overview
 
 This guide describes key patterns of behavior and use cases with code
-examples to help you migrate code from the legacy `backend.run()` interface (`qiskit-ibmq-provider` package) to use the Qiskit Runtime primitives interface (`qiskit-ibm-runtime` package).  
+examples to help you migrate code from the legacy `backend.run()` interface to use the Qiskit Runtime primitives interface (`qiskit-ibm-runtime` package).  
 
 <Admonition type="note" title="Notes">
 - Because `backend.run()` only returned counts, the direct replacement is Qiskit Runtime `SamplerV2`.  However, if you used manual processing with `backend.run()` to return an expectation value, you can now use Qiskit Runtime `EstimatorV2` instead.
 - Because both `backend.run()` and the "version 1" primitives are being deprecated, this guide uses only the V2 primitives. 
 </Admonition>
 
-## Overview
-
-The `qiskit-ibm-runtime` package provides cloud access to the IBM Quantum&trade; systems through the primitives interface, which supersedes (and fully replaces) the former hardware interface, `backend.run()`. The `backend.run()` interface coexisted with the original (V1) primitives model as the dedicated “direct hardware access” entry point.  With the introduction of the V2 primitives interface, the new `SamplerV2` class now fulfills that role. Consequentially, `qiskit-ibmq-provider`, the package that exposed the `backend.run()` interface, has been deprecated. 
+The `qiskit-ibm-runtime` package provides cloud access to the IBM Quantum&trade; systems through the primitives interface, which supersedes (and fully replaces) the former hardware interface, `backend.run()`. The `backend.run()` interface coexisted with the original (V1) primitives model as the dedicated “direct hardware access” entry point.  With the introduction of the V2 primitives interface, the new `SamplerV2` class now fulfills that role. Consequentially, `backend.run()` is being deprecated, along with `qiskit-ibm-provider`, which only exposed the `backend.run()` interface. 
 
 The Qiskit Runtime primitives implement the reference Sampler V2 and Estimator V2 interfaces found in `qiskit.primitives`, and enable capabilities not available with the legacy `backend.run()` interface. These capabilities include application of advanced processing techniques for error suppression and mitigation in Estimator, the ability to efficiently sweep between arrays of parameter value sets or observables in both Sampler and Estimator, and access to the new local testing mode. Additionally, Qiskit Runtime lets users run iterative algorithm circuits back to back (session mode) or in collections of circuits without having to re-queue each job (batch mode). This results in more efficient quantum processor use and reduces the time spent running complex computations. 
 
