--- a/docs/api/migration-guides/qiskit-runtime-from-ibm-provider.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-from-ibm-provider.mdx
@@ -6,27 +6,48 @@ description: Migrate from backend.run in qiskit-ibm-provider to using Qiskit Run
 
 # Migrate from `qiskit_ibm_provider` to `qiskit_ibm_runtime`
 
-The [`qiskit_ibm_provider`](../qiskit-ibm-provider) package from Qiskit Runtime is being deprecated. This guide describes how to migrate code that implemented `IBMBackend.run()`
+This topic describes how to migrate code that implemented `IBMBackend.run()`
 using `qiskit_ibm_provider` to use `qiskit_ibm_runtime` instead.
 
-## Example: Straightforward execution of IBMBackend.run()
+## Example: Basic execution
 
 <Tabs>
   <TabItem value="updated" label="Qiskit Runtime">
 ```python
-from qiskit_ibm_runtime import QiskitRuntimeService
-
-service = QiskitRuntimeService(channel="ibm_quantum")
-backend = service.backend("ibmq_qasm_simulator")
-transpiled_circuit = transpile(circuit, backend=backend)
-job = backend.run(transpiled_circuit)
-print(job.result())
+import numpy as np
+from qiskit.circuit.library import IQP
+from qiskit.quantum_info import random_hermitian
+from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler
+ 
+service = QiskitRuntimeService()
+ 
+backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
+ 
+circuit = QuantumCircuit(2, 2)
+circuit.h(0)
+circuit.cx(0, 1)
+circuit.measure_all()
+ 
+pm = generate_preset_pass_manager(backend=backend, optimization_level=1)
+isa_circuit = pm.run(circuit)
+ 
+sampler = Sampler(backend)
+job = sampler.run([(isa_circuit,)])
+result = job.result()
+print(f" > Counts: {result[0].data.meas.get_counts()}")
 ```
   </TabItem>
 
-  <TabItem value="legacy" label="Provider">
+  <TabItem value="legacy" label="backend.run">
 ```python
 from qiskit_ibm_provider import IBMProvider
+from qiskit import *
+from qiskit.compiler import transpile, assemble
+
+circuit = QuantumCircuit(2, 2)
+circuit.h(0)
+circuit.cx(0, 1)
+circuit.measure_all()
 
 provider = IBMProvider()
 backend = provider.get_backend("ibmq_qasm_simulator")
@@ -36,25 +57,24 @@ print(job.result())
 ```
   </TabItem>
 
-    <TabItem value="backend.run" label="backend.run">
-```python
-from qiskit import *
-from qiskit.compiler import transpile, assemble
-
-circuit = QuantumCircuit(2, 2)
-circuit.h(0)
-circuit.cx(0, 1)
-circuit.measure_all()
-```
-  </TabItem>
-
 </Tabs>
 
 
-## Example: Execution of backend.run() within a session
+## Example: Execute `backend.run()` within a session
 
-This section of code is identical in Provider and in Runtime.
+<Tabs>
+  <TabItem value="Updated" label="Runtime primitives">
+```python
+with Session(service=service, backend=backend) as session: 
+    sampler = Sampler(session=session) 
+    job = sampler.run([(isa_circuit)]) 
+    another_job = sampler.run([(another_isa_circuit)]) 
+    result = job.result()
+    another_result = another_job.result()
+```
+  </TabItem>
 
+  <TabItem value="Legacy" label="backend.run">
 ```python
 with backend.open_session() as session:
     job1 = backend.run(transpiled_circuit)
@@ -63,37 +83,5 @@ with backend.open_session() as session:
     print(job2.session_id)
 backend.cancel_session()
 ```
-
-Sessions are implemented differently in `IBMBackend` than when using primitives.
-Therefore, we cannot run a primitive and use backend.run() within a single session. If you specify both, one will be run outside of the session.
-
-## Example: Primitive session containing backend.run
-
-In this example, `sampler` is run within session, but `backend` is run independently
-of the session.
-
-```python
-from qiskit_ibm_runtime import Session, Sampler
-
-with Session(backend=backend) as session:
-    sampler = Sampler(session=session)
-    job1 = sampler.run(transpiled_circuit)
-    job2 = backend.run(transpiled_circuit) # runs outside the session
-    print(job1.session_id)
-    print(job2.session_id)  # is None
-```
-
-## Example 4: `Backend` session containing Sampler
-
-In this example, `backend` is run within a session, but `sampler` is run independently
-of the session.
-
-```python
-with backend.open_session() as session:
-    sampler = Sampler(backend=backend)
-    job1 = sampler.run(transpiled_circuit)  # runs outside the session
-    job2 = backend.run(transpiled_circuit)
-    session_id = session.session_id
-    print(job1.session_id)  # is None
-    print(job2.session_id)
-```
+  </TabItem>
+</Tabs>
