--- a/docs/api/migration-guides/qiskit-runtime.mdx
+++ b/docs/api/migration-guides/qiskit-runtime.mdx
@@ -59,7 +59,7 @@ See these topics:
 See the following topics:
 
 - [Migrate `backend.run` options to primitive options.](qiskit-runtime-options)
-- [Common use cases - Options section](qiskit-runtime-options#migrate-options)
+- [Common use cases - Options section](qiskit-runtime-use-case#migrate-options)
 
 
 ## Next steps
