--- a/docs/api/migration-guides/qiskit-runtime-options.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-options.mdx
@@ -6,7 +6,7 @@ description: Migrate backend.run options to Qiskit Runtime primitive options
 in_page_toc_max_heading_level: 2
 ---
 
-# Migrate `backend.run` options to primitive options
+# Migrate options
 
 All `backend.run` options are now available through the Qiskit Runtime primitives. There are additional options available with the V2 primitives.  See the [API reference](/api/qiskit-ibm-runtime/options) for the list of available options. See [Advanced Qiskit Runtime options](../../run/advanced-runtime-options) for details about specifying V2 primitives options. 
 
