--- a/docs/api/migration-guides/qiskit-runtime-examples.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-examples.mdx
@@ -97,7 +97,7 @@ result = job.result()
   </TabItem>
 </Tabs>
 
-<span id="estimator-example">
+<span id="estimator-example"></span>
 ### End-to-end example
 
 If your code previously calculated expectation values using
