--- a/docs/api/migration-guides/qiskit-runtime-use-case.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-use-case.mdx
@@ -197,3 +197,7 @@ print(counts)
 ```
   </TabItem>
 </Tabs>
+
+## Upload, view, or delete custom prototype programs
+
+This function has been replaced with Quantum Serverless patterns.  For instructions to migrate, see [Converting from Qiskit Runtime Programs.](https://qiskit-extensions.github.io/quantum-serverless/migration/migration_from_qiskit_runtime_programs.html)
