--- a/docs/api/migration-guides/qiskit-runtime-options.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-options.mdx
@@ -8,7 +8,7 @@ in_page_toc_max_heading_level: 2
 
 # Migrate options
 
-All `backend.run` options are now available through the Qiskit Runtime primitives. There are additional options available with the V2 primitives.  See the [API reference](/api/qiskit-ibm-runtime/options) for the list of available options. See [Advanced Qiskit Runtime options](../../run/advanced-runtime-options) for details about specifying V2 primitives options. 
+All `backend.run` options are now available through the Qiskit Runtime primitives, but there are additional options available with the V2 primitives.  See the [API reference](/api/qiskit-ibm-runtime/options) for the full list of available options. See [End-to-end examples](qiskit-runtime-examples) and [Advanced Qiskit Runtime options](../../run/advanced-runtime-options) for more information about specifying V2 primitives options. 
 
 | backend.run options | V2 Primitive options                                                                                                  | Notes                                                                                                                                |
 |---------------------|-----------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------|
@@ -17,7 +17,7 @@ All `backend.run` options are now available through the Qiskit Runtime primitive
 | job_tags            | options.environment.job_tags                                                                                          |                                                                                                                                      |
 | experiment_id       | N/A: Use job_tags instead.                                                                                            | ibmq-provider only                                                                                                                   |
 | header              | You can attach metadata to circuits. The same metadata is returned in the result metadata, under “circuit_metadata”.  |                                                                                                                                      |
-| shots               | run([(…, shots)]) or run(…, shots=) or options.default_shots                                                          | default_shots is available only with SamplerV2                                                                                       |
+| shots               | run([(…, shots)]), run(…, shots=), or options.default_shots                                                           | default_shots is available with SamplerV2 only                                                                                       |
 | memory              | Use result.data.meas.get_counts() to get counts and result.data.meas.get_bitstrings() to get per-shot measurements    | SamplerV2 is essentially always memory=True                                                                                          |
 | qubit_lo_freq       | N/A: This option only applies to `Schedule` inputs, which was deprecated in 2022.                                     |                                                                                                                                      |
 | meas_lo_freq        | N/A: This option only applies to `Schedule` inputs, which was deprecated in 2022.                                     |                                                                                                                                      |
@@ -32,7 +32,7 @@ All `backend.run` options are now available through the Qiskit Runtime primitive
 | parameter_binds     | Specify parameters in PUBs.                                                                                           | ibmq-provider only                                                                                                                   |
 | use_measure_esp     | N/A: This is no longer supported by IBM backends.                                                                     |                                                                                                                                      |
 | live_data_enabled   | N/A: This feature was removed in 2022.                                                                                | ibmq-provider only                                                                                                                   |
-| dynamic             | N/A: No longer needed. SamplerV2 knows if it’s dynamic.                                                               | ibm-provider only                                                                                                                    |
+| dynamic             | N/A: No longer needed. SamplerV2 automatically detects dynamic circuits.                                              | ibm-provider only                                                                                                                    |
 | init_circuit        | N/A: Use init_qubits instead.                                                                                         |                                                                                                                                      |
 | init_num_resets     | N/A: Use init_qubits instead.                                                                                         |                                                                                                                                      |
 | noise_model         | options.simulator.noise_model                                                                                         |                                                                                                                                      |
@@ -43,4 +43,4 @@ All `backend.run` options are now available through the Qiskit Runtime primitive
 One of the advantages of the primitives is that they abstract away the
 circuit execution setup so that algorithm developers can focus on the
 pure algorithmic components. However, sometimes, to get the most out of
-an algorithm, you might want to tune certain primitive options. For details, see [Advanced runtime options](../../run/advanced-runtime-options).
+an algorithm, you might want to tune certain primitive options. For details, see [Advanced runtime options.](../../run/advanced-runtime-options)
