--- a/docs/api/migration-guides/qiskit-runtime-use-case.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-use-case.mdx
@@ -38,7 +38,7 @@ result = job.result()
 <span id="migrate-options"></span>
 ## Circuits with options
 
-All options that were available with `backend.run` are available in the Qiskit Runtime primitives, but they are specified differently.  For more information, see [Migrate `backend.run` options to primitive options](qiskit-runtime-options) and [Advanced Qiskit Runtime options.](../../run/advanced-runtime-options)
+All options that were available with `backend.run` are available in the Qiskit Runtime primitives, but they are specified differently.  For more information, see [Migrate options](qiskit-runtime-options) and [Advanced Qiskit Runtime options.](../../run/advanced-runtime-options)
 
 <Tabs>
   <TabItem value="Updated" label="Runtime primitives">
@@ -128,7 +128,15 @@ qc.measure(0, 0)
 
 qc.draw()
 ```
-
+     ┌───┐     ┌──────────┐                      ┌───┐┌─┐
+q_0: ┤ H ├──■──┤ Rz(θ[0]) ├───────────────────■──┤ H ├┤M├
+     └───┘┌─┴─┐└──────────┘┌──────────┐     ┌─┴─┐└───┘└╥┘
+q_1: ─────┤ X ├─────■──────┤ Rz(θ[1]) ├──■──┤ X ├──────╫─
+          └───┘   ┌─┴─┐    ├──────────┤┌─┴─┐└───┘      ║ 
+q_2: ─────────────┤ X ├────┤ Rz(θ[2]) ├┤ X ├───────────╫─
+                  └───┘    └──────────┘└───┘           ║ 
+c: 1/══════════════════════════════════════════════════╩═
+                                                       0 
 
 Assign the following parameter values to the circuit:
 
@@ -139,7 +147,7 @@ theta_values = [np.pi/2, np.pi/2, np.pi/2]
 
 <Tabs>
   <TabItem value="updated" label="Runtime primitives">
-Qiskit Runtime V2 primitives support only circuits that adhere to the Instruction Set Architecture (ISA) of a particular backend, so we must transform our circuits. 
+Qiskit Runtime V2 primitives support only circuits that adhere to the Instruction Set Architecture (ISA) of a particular backend, so we must transform the circuits. 
 
 ```python
 from qiskit_ibm_runtime import QiskitRuntimeService
@@ -154,7 +162,7 @@ isa_circuit = pm.run(qc)
 
 The primitives take in parametrized circuits directly, together
 with the parameter values, and the parameter assignment operation can be
-performed more efficiently on the server side of the primitive.  The input is in the form of primitive unified blocs (PUBs).  Each PUB is a tuple that contains a circuit and the data broadcasted to it.  For further details, see [Introduction to primitives.](../../run/primitives#interface-changes)
+performed more efficiently on the server side.  The input is in the form of primitive unified blocs (PUBs), where each PUB is a tuple that contains a circuit and the data broadcasted to it. For further details, see [Introduction to primitives.](../../run/primitives#interface-changes)
 
 This feature is particularly interesting when working with iterative
 algorithms because the parametrized circuit remains unchanged between
@@ -164,7 +172,7 @@ efficiently. Moreover, only the updated parameters are transferred to
 the cloud, saving additional bandwidth.
 
 <Admonition type="note">
-As shown in the previous image, the classical register name is `c`.  Alternatively, you can find the classical register name by running `<circuit_name>.cregs`. For example: `qc.cregs`.
+You need the classical register name to get the results.  By default, it is named `meas`.  However, as shown in the previous image, the classical register name for this example is `c`.  You can also find the classical register name by running `<circuit_name>.cregs`. For example, `qc.cregs`.
 </Admonition>
 
 ``` python
