Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/build-new/circuit-visualization.ipynb
+++ b/docs/build-new/circuit-visualization.ipynb
@@ -204,7 +204,7 @@
     "Depending on the output, there are also options to customize the circuit diagram.\n",
     "\n",
     "#### Disable plot barriers and reverse bit order\n",
-    "The first two options are shared among all three backends. They allow you to configure both the bit orders and whether or not you draw barriers. These can be set by the `reverse_bits` kwarg and `plot_barriers` kwarg, respectively. The following examples will work with any output renderer; `mpl` is used here for brevity."
+    "The first two options are shared among all three backends. They allow you to configure both the bit orders and whether or not you draw barriers. These can be set by the `reverse_bits` kwarg and `plot_barriers` kwarg, respectively. The following examples work with any output renderer; `mpl` is used here for brevity."
    ]
   },
   {
@@ -319,7 +319,7 @@
     "\n",
     "The `fold` argument sets a maximum width for the output. In the `text` renderer, this sets the length of the lines of the diagram before it is wrapped to the next line.  When using the 'mpl' renderer, this is the number of (visual) layers before folding to the next line.\n",
     "\n",
-    "The `mpl` renderer has the `style` kwarg, which changes the colors and outlines. See the [API documentation](https://docs.quantum.ibm.com/api/qiskit/qiskit.circuit.QuantumCircuit#draw) for more details.\n",
+    "The `mpl` renderer has the `style` kwarg, which changes the colors and outlines. See the [API documentation](/api/qiskit/qiskit.circuit.QuantumCircuit#draw) for more details.\n",
     "\n",
     "The `scale` option scales the output of the `mpl` and `latex` renderers."
    ]
@@ -417,7 +417,7 @@
    "source": [
     "### Standalone circuit-drawing function\n",
     "\n",
-    "If you have an application where you prefer to draw a circuit with a self-contained function instead of as a method of a circuit object, you can directly use the `circuit_drawer()` function, which is part of the public stable interface from `qiskit.visualization`. The function behaves identically to the `circuit.draw()` method, except that it takes in a circuit object as required argument."
+    "If you have an application where you prefer to draw a circuit with a self-contained function instead of as a method of a circuit object, you can directly use the `circuit_drawer()` function, which is part of the public stable interface from `qiskit.visualization`. The function behaves identically to the `circuit.draw()` method, except that it takes in a circuit object as a required argument."
    ]
   },
   {
