Remove awkard sentence

--- a/docs/build-new/plot-quantum-states.ipynb
+++ b/docs/build-new/plot-quantum-states.ipynb
@@ -13,7 +13,7 @@
    "id": "e0242a86-db2b-4cdd-835e-4aa8a5349fb8",
    "metadata": {},
    "source": [
-    "In many situations – such as learning or debugging – it's helpful to visualize the state of a quantum computer. Here we assume you already have a particular state from simulation or state tomography. These visualizations require resources exponential in the number of qubits, so it's only possible to view the states of small quantum systems.\n",
+    "In many situations – such as learning or debugging – it's helpful to visualize the state of a quantum computer. Here we assume you already have a particular state from simulation or state tomography.  It's only possible to view the states of small quantum systems.\n",
     "\n",
     "<Admonition title=\"Using the output from functions\" type=\"tip\">\n",
     "All functions on this page return rich objects. When the last line of a code cell outputs these objects, Jupyter notebooks display them below the cell. If you call these functions in some other environments or in scripts, you will need to explicitly show or save the outputs.\n",
