Apply suggestions from code review
Co-authored-by: Jessie Yu <jessieyu@us.ibm.com>

--- a/docs/api/migration-guides/qiskit-runtime.mdx
+++ b/docs/api/migration-guides/qiskit-runtime.mdx
@@ -33,7 +33,8 @@ your algorithm is based on:
 -   If it uses an **expectation value** of a certain observable with respect to a quantum state (a real number), you will now use Estimator. 
 
     An expectation value of an observable could be the target quantity in scenarios where knowing a quantum state is not relevant. This often occurs in optimization problems or chemistry applications. For example, when trying to discover the extremal energy of a system.
--   If it uses a **probability distribution** from sampling the device (a list of quasi-probabilities), you will now use Sampler. 
+-   If it uses a **probability distribution** from sampling the device, you will now use Sampler. 
+
 
     A probability distribution is often of interest in optimization problems that return a classical bit string, encoding a certain solution to a problem at hand. In these cases, you might be interested in finding a bit string that corresponds to a ket value with the largest probability of being measured from a quantum state, for example.
 
