--- a/docs/api/migration-guides/qiskit-runtime-examples.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-examples.mdx
@@ -13,7 +13,8 @@ Follow these examples to design a Qiskit Runtime algorithm.
 
 Use the Estimator primitive to design an algorithm that calculates expectation values.
 
-**Backend.run() model:** In this model, you accessed real systems and remote simulators by using the `qiskit-ibmq-provider` module (which was migrated to `qiskit-ibm-provider`). To run **local** simulations, you could import a specific simulator from `qiskit-aer`. All of them followed the `backend.run()` interface.
+**Backend.run() model:** In this model, you accessed real systems and remote simulators by using the `qiskit-ibmq-provider` or the `qiskit-ibm-provider` module. To run **local** simulations, you could import a specific simulator from `qiskit-aer`. All of them followed the `backend.run()` interface.
+
 
 <Tabs>
   <TabItem value="provider" label="qiskit-ibmq-provider">
@@ -398,9 +399,11 @@ circuits and extracts probability distributions.
 
 Both `Sampler` and `backend.run()` take in circuits as inputs. The main
 difference is the format of the output: `backend.run()` outputs
-**counts**, while `Sampler` processes those counts and outputs the **per-shot measurements** (in the form of bitstrings) associated with them.
+**counts**, while `Sampler` returns **per-shot measurements** (but has convenience methods to also return counts).
 
-**Backend.run() model:** In this model, you used the `qiskit-ibmq-provider` (now migrated to `qiskit-ibm-provider`) module to access real systems and remote simulators. To run **local** simulations, you could import a specific simulator from `qiskit-aer`. All of them followed the `backend.run()` interface.
+
+**Backend.run() model:** In this model, you used the `qiskit-ibmq-provider` or the `qiskit-ibm-provider` module to access real systems and remote simulators. To run **local** simulations, you could import a specific simulator from `qiskit-aer`. All of them followed the `backend.run()` interface.
+
 
 <Tabs>
   <TabItem value="provider" label="qiskit-ibmq-provider">
@@ -432,7 +435,8 @@ difference is the format of the output: `backend.run()` outputs
     </TabItem>
 </Tabs>
 
-    **Primitives model:** Access real systems and remote simulators through the `qiskit-ibm-runtime` Sampler and Estimator *primitives*. Use **local testing mode** to run local simulations by using Qiskit Runtime fake backends or Aer simulators.
+    **Primitives model:** Access real systems through the `qiskit-ibm-runtime` Sampler and Estimator *primitives*. Use **local testing mode** to run local simulations by using Qiskit Runtime fake backends or Aer simulators.
+
 
     <Tabs>
     <TabItem value="hw" label="Run on quantum systems">
@@ -449,7 +453,8 @@ difference is the format of the output: `backend.run()` outputs
     sampler = Sampler(backend=backend)
 
     # Run calculation
-    job = sampler.run([(isa_circuit,)])
+    job = sampler.run([isa_circuit])
+
     result = job.result()
     ```
     </TabItem>
@@ -469,7 +474,8 @@ options = {"simulator": {"seed_simulator": 42}}
 sampler = Sampler(backend=fake_manila, options=options)
 
 # Run calculation
-job = sampler.run([(isa_circuit,)]))
+job = sampler.run([isa_circuit])
+
 result = job.result()
 ```
   </TabItem>
