--- a/docs/run/primitives-examples.mdx
+++ b/docs/run/primitives-examples.mdx
@@ -627,8 +627,8 @@ another_isa_circuit = pm.run(another_circuit)
  
 with Session(service=service, backend=backend) as session: 
     sampler = Sampler(session=session) 
-    job = sampler.run([(isa_circuit)]) 
-    another_job = sampler.run([(another_isa_circuit)]) 
+    job = sampler.run([(isa_circuit,)]) 
+    another_job = sampler.run([(another_isa_circuit,)]) 
     result = job.result()
     another_result = another_job.result() 
  
