Because tables are the worst and you can't put anything special in them.

--- a/docs/api/migration-guides/qiskit-runtime-options.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-options.mdx
@@ -18,7 +18,7 @@ All `backend.run` options are now available through the Qiskit Runtime primitive
 | experiment_id       | N/A: Use job_tags instead.                                                                                            | ibmq-provider only                                                                                                                   |
 | header              | You can attach metadata to circuits. The same metadata is returned in the result metadata, under “circuit_metadata”.  |                                                                                                                                      |
 | shots               | Any of the following: <br></br>run([(…, shots)]) <br></br>run(…, shots=) <br></br>options.default_shots                                                |                                                                                                                                      |
-| memory              | Use result.data.<classical_register_name>.get_counts() to get counts and result.data.<classical_register_name>.get_bitstrings() to get per-shot measurements    |                                                                                          |
+| memory              | Use result.data.classical_register_name.get_counts() to get counts and result.data.classical_register_name.get_bitstrings() to get per-shot measurements    |                                                                                          |
 | qubit_lo_freq       | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
 | meas_lo_freq        | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
 | schedule_los        | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
