try the table this way

--- a/docs/api/migration-guides/qiskit-runtime-options.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-options.mdx
@@ -22,8 +22,8 @@ All `backend.run` options are now available through the Qiskit Runtime primitive
 | qubit_lo_freq       | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
 | meas_lo_freq        | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
 | schedule_los        | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
-| meas_level          | options.execution.meas_type                                                                                           | (meas_level, meas_return) → meas_type <br></br>0, * → not implemented <br></br>1, “avg” → “avg_kerneled” <br></br>1, “single” → “kerneled” <br></br>2, * → “classified”  |
-| meas_return         | options.execution.meas_type                                                                                           | See above                                                                                                                   |
+| meas_level          | options.execution.meas_type: <br></br>avg_kerneled replaces meas_level=1 and meas_return="avg" <br></br>kerneled replaces meas_level=1 and meas_return="single" <br></br>classified replaces meas_level=2 <br></br>meas_level=0 is no longer supported by IBM backends.                                                                                           |   |
+| meas_return         | options.execution.meas_type (See above)                                                                                          |                                                                                                                   |
 | memory_slots        | N/A: This is automatically determined by the system.                                                                  | ibmq-provider only                                                                                                                   |
 | memory_slot_size    | N/A: This is automatically determined by the system.                                                                  | ibmq-provider only                                                                                                                   |
 | rep_time            | N/A: Use rep_delay instead.                                                                                           |                                                                                                                                      |
