--- a/docs/api/migration-guides/qiskit-runtime-options.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-options.mdx
@@ -13,12 +13,12 @@ All `backend.run` options are now available through the Qiskit Runtime primitive
 | backend.run options | V2 Primitive options                                                                                                  | Notes                                                                                                                                |
 |---------------------|-----------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------|
 | job_name            | N/A: Use job_tags instead.                                                                                            | ibmq-provider only                                                                                                                   |
-| job_share_level     | N/A: This was deprecated long ago and no longer supported.                                                            | ibmq-provider only                                                                                                                   |
+| job_share_level     | N/A: This is no longer supported.                                                            | ibmq-provider only                                                                                                                   |
 | job_tags            | options.environment.job_tags                                                                                          |                                                                                                                                      |
 | experiment_id       | N/A: Use job_tags instead.                                                                                            | ibmq-provider only                                                                                                                   |
 | header              | You can attach metadata to circuits. The same metadata is returned in the result metadata, under “circuit_metadata”.  |                                                                                                                                      |
-| shots               | Any of the following: <br></br>run([(…, shots)]) <br></br>run(…, shots=) <br></br>options.default_shots                                                |                                                                                                                                      |
-| memory              | Use result.data.classical_register_name.get_counts() to get counts and result.data.classical_register_name.get_bitstrings() to get per-shot measurements    |                                                                                          |
+| shots               | Any of the following: <br></br>* run([(…, shots)]) <br></br>* run(…, shots=) <br></br>* options.default_shots                                                |                                                                                                                                      |
+| memory              | Use result.data.classical_register_name.get_counts() to get counts <br></br>Use result.data.classical_register_name.get_bitstrings() to get per-shot measurements    |                                                                                          |
 | qubit_lo_freq       | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
 | meas_lo_freq        | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
 | schedule_los        | N/A: This option only applies to `Schedule` inputs, which was removed in 2022.                                     |                                                                                                                                      |
